@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Added spoken Slylandro probe coordinates (bug #732) - Nic, Alex
 - Added the missing bits to the no-voice versions of Mycon, Syreen and
   Utwig dialogue (bug #327) - Alex
 - Syreen dialog tree no longer resets after visiting the Syreen Vault
